[package]
name = "cargo-cross"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]

[dependencies]
console = "0.6.1"
directories = "1.0.1"
env_logger = "0.5.12"
failure = "0.1.2"
heck = "0.3.0"
indicatif = "0.9.0"
log = "0.4.3"
platforms = "0.1.3"
reqwest = "0.8.6"
semver = {version = "0.9.0", features = ["serde"]}
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
structopt = "0.2.10"
tar = "0.4.16"
tempfile = "3.0.3"
xz2 = "0.1.5"

[dev-dependencies]
assert_cmd = "0.9.1"
cargo-toml-builder = "0.1.0"
